--- a/Server/Backend/packages.config
+++ b/Server/Backend/packages.config
@@ -2,18 +2,17 @@
 <packages>
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebApi.Owin" version="5.2.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net461" />
   <package id="Microsoft.Owin" version="3.1.0" targetFramework="net461" />
-  <package id="Microsoft.Owin.Host.SystemWeb" version="3.1.0" targetFramework="net461" />
-  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
+  <package id="Microsoft.Owin.FileSystems" version="3.1.0" targetFramework="net461" />
+  <package id="Microsoft.Owin.StaticFiles" version="3.1.0" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net461" />
   <package id="Owin" version="1.0" targetFramework="net461" />
-  <package id="Swashbuckle" version="5.5.3" targetFramework="net461" />
   <package id="Swashbuckle.Core" version="5.5.3" targetFramework="net461" />
   <package id="System.Net.Http" version="4.3.2" targetFramework="net461" />
   <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="net461" />
   <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net461" />
   <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net461" />
   <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="net461" />
-  <package id="WebActivatorEx" version="2.2.0" targetFramework="net461" />
 </packages>
